fixed for directory path

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM tomcat:8.5.35
-COPY ./lib/*.jar /usr/local/tomcat/lib
-COPY ./lib/*.xml /usr/local/tomcat/conf
+COPY ./lib/*.jar /usr/local/tomcat/lib/
+COPY ./lib/*.xml /usr/local/tomcat/conf/
