--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
-FROM tomcat:$(cat TOMCAT_VERSION.txt)
+FROM tomcat:8.5.35
 COPY ./lib/*.jar /usr/local/tomcat/lib/
 COPY ./lib/*.xml /usr/local/tomcat/conf/
